--- a/.env
+++ b/.env
@@ -11,6 +11,8 @@ DATABASE_PORT="3306"
 # Email Configurations
 EMAIL_HOST_USER="mohdasad.9506@gmail.com"
 EMAIL_HOST_PASSWORD="kurw zdlp skop yaun"
+DEFAULT_FROM_EMAIL="mohdasad.9506@gmail.com"
+ADMIN_EMAIL="mohdasad.9506@gmail.com"
 
-# Website url
-BASE_URL=http://localhost:8000
+# Website URL
+BASE_URL="http://localhost:8000"
