--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 SECRET_KEY="django-insecure-^5ae$7+(sa^e@k8awh6*q(l0**kl(qyg&*@dcmj51md@(k2rr6"
 
 # Database Configurations
-DATABASE_NAME="wesalvatare"
-DATABASE_USER="root"
-DATABASE_PASSWORD="A$ad2723"
-DATABASE_HOST="localhost"
+DATABASE_NAME="wesalvatore"
+DATABASE_USER="wesalvatore"
+DATABASE_PASSWORD="wesalvatore#123"
+DATABASE_HOST="wesalvatore.cbu0yg8aaa2h.ap-south-1.rds.amazonaws.com"
 DATABASE_PORT="3306"
 
 # Email Configurations
