--- a/.env
+++ b/.env
@@ -1,12 +1,21 @@
 # Django Secret Key
 SECRET_KEY="django-insecure-^5ae$7+(sa^e@k8awh6*q(l0**kl(qyg&*@dcmj51md@(k2rr6"
 
-# Database Configurations
-DATABASE_NAME="wesalvatare"
-DATABASE_USER="root"
-DATABASE_PASSWORD="A$ad2723"
+# MySQL Database Configurations
+
+#DATABASE_NAME="wesalvatare"
+#DATABASE_USER="root"
+#DATABASE_PASSWORD="A$ad2723"
+#DATABASE_HOST="localhost"
+#DATABASE_PORT="3306"
+
+
+# Postgres Database Configurations
+DATABASE_NAME="wesalvatore"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="12345678"
 DATABASE_HOST="localhost"
-DATABASE_PORT="3306"
+DATABASE_PORT="5433"
 
 # Email Configurations
 EMAIL_HOST_USER="mohdasad.9506@gmail.com"
