--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: wesalvatore
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.6.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,10 +34,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  image_picker: ^1.1.2
+  location: ^8.0.0
+  camera: ^0.11.0+2
+  permission_handler: ^11.3.1
   google_maps_flutter: ^2.10.0
+  flutter_map: ^8.0.0
+  latlong2: ^0.9.1
   geolocator: ^13.0.2
-  firebase_core: ^3.10.0
-  
+  http: ^1.3.0
+  flutter_osm_plugin: ^1.3.6
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.1
+  firebase_database: ^11.3.2
+  firebase_core_web: ^2.20.0
+  firebase_storage: ^12.4.0
+  google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
+  firebase_ui_auth: ^1.16.1
+  lottie: ^3.3.1
+  flutter_spinkit: ^5.2.1
+  shared_preferences: ^2.5.1
+  flutter_dotenv: ^5.2.1
+  font_awesome_flutter: ^10.8.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,7 +75,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -62,7 +82,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/
+    - assets/
+    - assets/background_animation.json
   # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -90,5 +111,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
- 
