--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   shared_preferences: ^2.5.1
   flutter_dotenv: ^5.2.1
   font_awesome_flutter: ^10.8.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +85,12 @@ flutter:
   assets:
     - assets/
     - assets/background_animation.json
+    - assets/backgroundimg.jpg
+    - assets/plainyellow.jpg
+    - assets/icon/google.png
+    - assets/icon/apple.png
+    - assets/icon/facebook.png
+    - assets/ws_logo.png
   # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
