Fix footer, Contact us, Updated landing page and Register Career page on admin panel

--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ DATABASE_PORT="5433"
 # Email Configurations
 EMAIL_HOST_USER="mohdasad.9506@gmail.com"
 EMAIL_HOST_PASSWORD="kurw zdlp skop yaun"
-DEFAULT_FROM_EMAIL="mohdasad.9506@gmail.com"
-ADMIN_EMAIL="mohdasad.9506@gmail.com"
+DEFAULT_FROM_EMAIL="ycn2kh2g@mailpwr.com"
+ADMIN_EMAIL="contact@wesalvatore.com"
 
 # Website URL
 BASE_URL="http://localhost:8000"
