Created new module 'base'

--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ SECRET_KEY="django-insecure-^5ae$7+(sa^e@k8awh6*q(l0**kl(qyg&*@dcmj51md@(k2rr6"
 # Postgres Database Configurations
 DATABASE_NAME="wesalvatore"
 DATABASE_USER="postgres"
-DATABASE_PASSWORD="12345678"
-DATABASE_HOST="localhost"
-DATABASE_PORT="5433"
+DATABASE_PASSWORD="Pass#test00786"
+DATABASE_HOST="wesalvatore.cbu0yg8aaa2h.ap-south-1.rds.amazonaws.com"
+DATABASE_PORT="5432"
 
 # Email Configurations
 EMAIL_HOST_USER="mohdasad.9506@gmail.com"
