drawer screen ui changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
