--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ SECRET_KEY="django-insecure-^5ae$7+(sa^e@k8awh6*q(l0**kl(qyg&*@dcmj51md@(k2rr6"
 DATABASE_NAME="wesalvatore"
 DATABASE_USER="postgres"
 DATABASE_PASSWORD="12345678"
-DATABASE_HOST="localhost"
+DATABASE_HOST="postgres_db"
 DATABASE_PORT="5433"
 
 # Email Configurations
