--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SECRET_KEY="django-insecure-^5ae$7+(sa^e@k8awh6*q(l0**kl(qyg&*@dcmj51md@(k2rr6"
 #DATABASE_NAME="wesalvatare"
 #DATABASE_USER="root"
 #DATABASE_PASSWORD="A$ad2723"
-#DATABASE_HOST="localhost"
+#DATABASE_HOST="144.24.122.171"
 #DATABASE_PORT="3306"
 
 
