--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_fonts: ^6.2.1
   fluttertoast: ^8.2.12
   flutter_polyline_points: ^2.1.0
+  flutter_translate: ^3.1.0
 
 dev_dependencies:
   flutter_test:
