user api is working fine

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_translate: ^3.1.0
   provider: ^5.0.0-nullsafety.3
   flutter_secure_storage: ^9.2.4
+  image: ^4.5.3
 
 dev_dependencies:
   flutter_test:
